fix spacing issue

--- a/src/components/AudioPlayer/PlaybackControls.module.scss
+++ b/src/components/AudioPlayer/PlaybackControls.module.scss
@@ -5,7 +5,8 @@
   justify-content: center;
   align-items: center;
 }
-.container > button + button {
+
+.actionItem + .actionItem {
   margin-left: var(--spacing-xsmall);
   @include breakpoints.desktop {
     margin-left: var(--spacing-medium);
